# UrbanAgent

DefenseAgent-main/: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml  requirements.txt
DefenseAgent-main/DefenseAgent/: __init__.py  _factory.py
DefenseAgent-main/DefenseAgent/agent/: __init__.py  _builder.py  base.py  config.py  plan_and_solve.py  react.py  simple.py
DefenseAgent-main/DefenseAgent/config/: __init__.py  profile.py
DefenseAgent-main/DefenseAgent/examples/: __init__.py
DefenseAgent-main/DefenseAgent/examples/example_agent/: profile.yaml
DefenseAgent-main/DefenseAgent/llm/: __init__.py  _registry.py  anthropic.py  base.py  errors.py  llm.py  openai_compat.py  types.py
DefenseAgent-main/DefenseAgent/memory/: __init__.py  _bridge.py  base.py  consolidator.py  context_compressor.py  mem0_memory.py  orchestrator.py  scoring.py  shared.py  types.py  working.py
DefenseAgent-main/DefenseAgent/ops/: __init__.py  logger.py
DefenseAgent-main/DefenseAgent/rag/: __init__.py  _bridge.py  base.py  extraction.py  llama_index_rag.py  renderer.py
DefenseAgent-main/DefenseAgent/reflection/: __init__.py  reflection.py  scorer.py  synthesizer.py
DefenseAgent-main/DefenseAgent/skills/: __init__.py  container.py  loader.py
DefenseAgent-main/DefenseAgent/tools/: __init__.py  mcp.py  tools.py  types.py
DefenseAgent-main/docs/: AGENT_CONFIG.md
DefenseAgent-main/docs/superpowers/specs/: 2026-04-22-module-01-llm-adapter-design.md  2026-04-22-module-02-agent-profile-design.md  2026-04-22-module-03-logger-design.md  2026-04-22-module-04-memory-design.md  2026-04-22-module-05-reflection-design.md  2026-04-24-module-06-tools-design.md  2026-04-25-module-07-agent-design.md  2026-04-28-self-evolution-skills-design.md
DefenseAgent-main/docs/superpowers/specs_ZN/: 2026-04-22-module-01-llm-adapter-design.md  (+5 more)
DefenseAgent-main/docs/walkthroughs/: module-01-llm-adapter.md  module-02-agent-profile.md  module-03-logger.md  module-04-memory.md  module-05-reflection.md  module-06-tools.md  module-07-agent.md
DefenseAgent-main/docs/walkthroughs_ZN/: module-01-llm-adapter.md  module-02-agent-profile.md  module-03-logger.md  module-04-memory.md  module-05-reflection.md  module-06-tools.md
DefenseAgent-main/scripts/: dump_memory.py  logger_demo.py  memory_demo.py  profile_chat_demo.py  react_tools_memory_demo.py  reflection_demo.py  show_profile.py  smoke_chat.py  smoke_new_memory.py  smoke_real_backend.py  streaming_demo.py  structured_extraction_demo.py  structured_rag_agent_demo.py  tools_demo.py
DefenseAgent-main/scripts/extras/: csv_renderer.py  docx_extractor.py
DefenseAgent-main/tests/DefenseAgent/: test_factory.py  test_integration.py
urbanagent-main/: .env.example  .gitignore  README.md  pyproject.toml
urbanagent-main/examples/: http_tools.example.json  mcp_servers.example.json
urbanagent-main/scripts/: carla_bridge_multiagent_demo.py  carla_bridge_patrol_fire_demo.py  inspect_bridge_snapshot.py  multiagent_smoke.py  patrol_fire_smoke.py  urban_agent_fire_demo.py
urbanagent-main/tests/: test_carla_bridge_adapter.py  test_carla_bridge_protocol_v1.py  test_multiagent_mvp.py
urbanagent-main/urbanagent/: __init__.py  agent.py  carla_bridge.py  dispatch.py  errors.py  fire_goto.py  resource_policy.py  routing.py  sandbox.py  schemas.py  tools.py  types.py
urbanagent-main/urbanagent/llm/: __init__.py  _registry.py  anthropic.py  base.py  llm.py  openai_compat.py
urbanagent-main/urbanagent/multiagent/: __init__.py  batch_runner.py  gating.py  llm_json.py  orchestrator.py  pipeline.py  registry.py  schemas.py  toolkit.py  world_cache.py
urbanagent-main/urbanagent/tooling/: __init__.py  builtin_names.py  facade.py  http_api.py  mcp_stdio.py
(+54 files in other folders)
